# adventofcode2023

./: CMakeLists.txt  README.md  copyfromtemplate.sh
.github/workflows/: cmake-multi-platform.yml  codeql.yml
2021day01/: 2021day01.cpp  CMakeLists.txt
2021day02/: 2021day02.cpp  CMakeLists.txt
2021day03/: 2021day03.cpp  CMakeLists.txt
2023day01/: 2023day01.cpp  CMakeLists.txt  test_2023day01.cpp
2023day02/: 2023day02.cpp  CMakeLists.txt  example.input  gui_2023day02.cpp  test_2023day02.cpp  user.input
2023day03/: 2023day03.cpp  CMakeLists.txt  test_2023day03.cpp
2023day04/: 2023day04.cpp  CMakeLists.txt  gui_2023day04.cpp  test_2023day04.cpp
2023day05/: 2023day05.cpp  CMakeLists.txt  gui_2023day05.cpp  test_2023day05.cpp
2023day06/: 2023day06.cpp  CMakeLists.txt
2023day07/: 2023day07.cpp  2023day07_2.cpp  CMakeLists.txt  test_2023day07_2.cpp
2023day08/: 2023day08.cpp  CMakeLists.txt  test_2023day08.cpp
2023day09/: 2023day09.cpp  2023day09_2.cpp  CMakeLists.txt  test_2023day09.cpp
2023day10/: 2023day10.cpp  CMakeLists.txt  test_2023day10.cpp
2023day11/: 2023day11.cpp  CMakeLists.txt
2023day12/: 2023day12.cpp  2023day12_2.cpp  CMakeLists.txt  test_2023day12.cpp  test_2023day12_2.cpp
2023day13/: 2023day13.cpp  2023day13_2.cpp  CMakeLists.txt  test_2023day13.cpp  test_2023day13_2.cpp
2023day14/: 2023day14.cpp  CMakeLists.txt  gui_2023day14.cpp  test_2023day14.cpp
2023day15/: 2023day15.cpp  CMakeLists.txt
2023day16/: 2023day16.cpp  CMakeLists.txt
2023day17/: 2023day17.cpp  2023day17_2.cpp  CMakeLists.txt  gui_2023day17.cpp  test_2023day17.cpp
2023day18/: 2023day18.cpp  CMakeLists.txt
2023day19/: 2023day19.cpp  CMakeLists.txt
2023day20/: 2023day20.cpp  CMakeLists.txt
2023day21/: 2023day21.cpp  CMakeLists.txt
2023day22/: CMakeLists.txt  gui_2023day22.cpp
libaoc/: CMakeLists.txt  libaoc.cpp  test_libaoc.cpp
libaoc/include/: libaoc.h
template/: CMakeLists.txt  gui_template.cpp  template.cpp  test_template.cpp
